--- a/styles/style.css
+++ b/styles/style.css
@@ -197,6 +197,7 @@ ul li {
     -ms-flex-direction: column;
     flex-direction: column;
     position: fixed;
+    z-index: 1;
     top: 25%;
     right: -150px; }
     @media (max-width: 960px) {
@@ -204,7 +205,8 @@ ul li {
         right: -125px;
         font-size: 0.8rem; } }
   .header__navItem {
-    width: 100%; }
+    width: 100%;
+    position: relative; }
   .header__navItem:first-child .header__link {
     margin-top: 0; }
   .header__navItem:last-child .header__link {
